Fixes page title letter-spacing

--- a/vinci/static/css/style.css
+++ b/vinci/static/css/style.css
@@ -757,7 +757,6 @@ body.active-nav #page .mask {
 #page #content .entry h1.page-title {
 	font-size: 1.4em;
 	font-weight: 400;
-	letter-spacing: -0.02em;
 	margin: 10px 0 0;
 }
 
